--- a/style.css
+++ b/style.css
@@ -138,7 +138,7 @@ body{
 
 .wave{
     margin: auto 0;
-    height: 300px;
+    height: 350px;
     width: 200px;
     display: flex;
     flex-direction: column;
@@ -154,12 +154,12 @@ body{
 {
     background: #fffded;
 
-    max-width: 60px;
+    max-width: 80%;
     min-width: 12px;
     width: 22px;
     height: 20px;
 
-    border-radius: 0 5px 5px 0;
+    border-radius: 0 10px 10px 0;
 
     margin: 2.5px 0;
 
@@ -169,12 +169,12 @@ body{
 {
     background: #fffded;
 
-    max-width: 70px;
+    max-width: 80%;
     min-width: 12px;
     width: 22px;
     height: 20px;
 
-    border-radius: 5px 0 0 5px;
+    border-radius: 10px 0 0 10px;
 
     margin: 2.5px 0;
 
