--- a/style.css
+++ b/style.css
@@ -67,7 +67,7 @@ body{
 
 #song-panel{
     padding: 5px 10px;
-    border: white 4px solid;
+    border: white 2px solid;
     border-radius: 10px;
     margin: 0 auto;
     max-width: 640px;
@@ -154,7 +154,8 @@ body{
 }
 .song-author{
     margin-left: 0.5em;
-    font-size: 80%;
+    font-size: 90%;
+    font-style: italic;
 }
 
 .controls-container{
